[metadata]
name = laz2csv
version = 1.0.0
license = MIT
description = Repo for LIDAR
long_description = file: README.md
author = justinbeetle
classifiers =
    Intended Audience :: End Users/Desktop
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.10

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires = file: requirements.txt

[options.packages.find]
where = src

[options.package_data]
laz2csv = py.typed
